--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ services:
 install:
   - pip install --upgrade --user awscli
 script:
-  - './bin/test-proj.sh -t'
+  - 'npm run test'
 after_success:
   - ./bin/docker-push.sh
