--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "test:watch": "npm run test -- --watch",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "show:coverage": "npm run test:cover && open coverage/index.html"
+    "show:coverage": "npm run test:cover && open coverage/index.html",
+    "prebump": "NODE_ENV=production npm run build",
+    "bump": "bump --prompt --commit --push",
+    "postbump": "editme -w",
   },
   "dependencies": {
     "@hackoregon/civic-server": "0.0.8",
@@ -54,12 +57,10 @@
     "babel-plugin-transform-class-properties": "6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-inline-elements": "6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.2.11",
     "babel-polyfill": "6.22.0",
-    "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
+    "babel-preset-stage-1": "6.16.0",
     "babel-register": "6.18.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -79,7 +80,6 @@
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.3",
-
     "react-leaflet": "^1.1.6",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
@@ -127,6 +127,7 @@
     "rimraf": "2.5.4",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
+    "version-bump-prompt": "^3.1.0",
     "webpack": "1.14.0",
     "webpack-bundle-analyzer": "2.1.1",
     "webpack-dev-middleware": "1.9.0",
