--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "show:coverage": "npm run test:cover && open coverage/index.html",
     "prebump": "NODE_ENV=production npm run build",
-    "bump": "bump --prompt --commit --push",
+    "bump": "bump --prompt --commit",
     "postbump": "editme -w"
   },
   "dependencies": {
