--- a/packages/civic-logger/package.json
+++ b/packages/civic-logger/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hackoregon/civic-logger",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-alpha.e7d4647a",
   "description": "just a logger",
   "main": "src/index.js",
+  "private": true,
   "repository": {
     "type": "git",
     "url": ""
