--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -30,7 +30,7 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-emergency-response": "^0.1.0",
+    "@hackoregon/civic-emergency-response": "^1.0.0-alpha.6bd7b1b5",
     "@hackoregon/civic-housing": "^1.0.0-alpha.6bd7b1b5",
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
