--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev lint:watch",
-    "lint": "esw src tools server webpack.config.* --color",
+    "start": "npm-run-all --parallel test:watch start:dev",
+    "lint": "eslint src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "-prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
