--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hackoregon/civic-babel-presets",
-  "version": "1.0.0-alpha.e7d4647a",
+  "version": "0.0.1",
+  "private": true,
   "description": "Unified babel presets for civic",
   "main": "index.js",
   "scripts": {
@@ -12,5 +13,17 @@
     "civic"
   ],
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-plugin-dynamic-import-node": "1.0.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-class-properties": "6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.24.0",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-plugin-transform-react-jsx-source": "6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.3.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.3.3",
+    "babel-preset-react": "6.23.0"
+  }
 }
