--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-emergency-response",
-  "version": "1.0.0-alpha.eadf9ac2",
+  "version": "1.0.0-alpha.a7c078a1",
   "description": "Hack Oregon Front-end React + Redux Starter",
   "author": "David Daniel",
   "license": "MIT",
@@ -38,7 +38,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^1.0.0-alpha.eadf9ac2",
+    "@hackoregon/component-library": "^1.0.0-alpha.a7c078a1",
     "axios": "^0.16.1",
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
@@ -67,30 +67,30 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^1.0.0-alpha.eadf9ac2",
+    "@hackoregon/webpacker": "^1.0.0-alpha.a7c078a1",
     "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "babel-register": "^6.23.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.24.1",
     "babili-webpack-plugin": "0.0.10",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -100,17 +100,17 @@
     "clean-webpack-plugin": "^0.1.15",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-react": "^6.10.3",
     "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "isparta": "^4.0.0",
