--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "civic-platform",
-  "version": "1.0.0-alpha.eadf9ac2",
+  "version": "1.0.0-alpha.a7c078a1",
   "description": "Civic - A Hack Oregon Project",
   "engines": {
     "node": ">=6"
@@ -30,20 +30,20 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-emergency-response": "^1.0.0-alpha.eadf9ac2",
-    "@hackoregon/civic-housing": "^1.0.0-alpha.eadf9ac2",
+    "@hackoregon/civic-emergency-response": "^1.0.0-alpha.a7c078a1",
+    "@hackoregon/civic-housing": "^1.0.0-alpha.a7c078a1",
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0",
+    "babel-runtime": "^6.24.1",
     "compression": "^1.6.2",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.1",
     "isomorphic-loader": "^1.6.2",
     "lodash": "^4.17.4",
@@ -55,7 +55,7 @@
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.3",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.3",
+    "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
