--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -36,9 +36,9 @@
     "build": "rimraf dist && babel-node ./tools/build.js",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
-    "start:dev": "cross-env NODE_ENV=development babel-node server",
-    "start:prod": "cross-env NODE_ENV=production node server",
-    "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
+    "start:dev": "cross-env BABEL_ENV=development babel-node server",
+    "start:prod": "cross-env BABEL_ENV=production node server",
+    "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
@@ -51,6 +51,7 @@
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
     "@hackoregon/webpacker": "^1.0.0-alpha.be5b7ddd",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.be5b7ddd",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "d3-format": "^1.2.0",
