--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hackoregon-frontend-starter",
-  "version": "0.1.0",
-  "description": "Hack Oregon Front-end React + Redux Starter",
+  "name": "@hackoregon/civic-housing",
+  "version": "0.0.1",
+  "description": "Civic/Budget 2017",
   "author": "David Daniel",
   "license": "MIT",
   "keywords": [
@@ -64,39 +64,29 @@
     "styled-components": "1.4.2"
   },
   "devDependencies": {
-    "autoprefixer": "6.5.4",
-    "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.10",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-class-properties": "6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-inline-elements": "6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
-    "babel-preset-latest": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-register": "6.18.0",
-    "chai": "3.5.0",
-    "chai-as-promised": "6.0.0",
-    "chai-enzyme": "0.6.1",
-    "chalk": "1.1.3",
-    "cheerio": "0.22.0",
-    "coveralls": "2.11.15",
-    "css-loader": "0.26.1",
-    "enzyme": "2.6.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.0.0",
-    "eslint-plugin-babel": "4.0.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
+    "@hackoregon/webpacker": "^1.0.0-alpha.be5b7ddd",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.be5b7ddd",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "colors": "^1.1.2",
+    "coveralls": "^2.11.15",
+    "css-loader": "^0.28.0",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-react": "^6.10.3",
     "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "isparta": "^4.0.0",
@@ -126,7 +116,6 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "watch": "^1.0.2",
     "webpack": "^2.5.1",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
@@ -134,24 +123,5 @@
     "webpack-hot-middleware": "^2.17.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-node-externals": "^1.5.4"
-  },
-  "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "build-storybook": "build-storybook",
-    "build": "lerna run build",
-    "bump": "lerna publish --skip-git --skip-npm",
-    "canary": "lerna publish --skip-git --skip-npm --canary",
-    "clean": "lerna clean",
-    "watch": "node scripts/watch",
-    "deploy-storybook": "storybook-to-ghpages",
-    "in": "lerna run --scope",
-    "link": "lerna exec npm link",
-    "lint": "lerna run lint -- --fix",
-    "postinstall": "npm run bootstrap",
-    "storybook": "BABEL_ENV=cjs start-storybook -p 6006",
-    "test": "lerna run test"
-  },
-  "dependencies": {
-    "babel-cli": "^6.24.1"
   }
 }
