--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hackoregon/civic-housing",
-  "version": "0.0.1",
+  "name": "@hackoregon/civic-budget",
+  "version": "1.0.0-alpha.1c62c05f",
   "description": "Civic/Budget 2017",
   "author": "David Daniel",
   "license": "MIT",
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev lint:watch",
-    "lint": "esw src tools server webpack.config.* --color",
+    "start": "npm-run-all --parallel test:watch start:dev",
+    "lint": "eslint src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
@@ -38,34 +38,34 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^0.2.5",
-    "babel-polyfill": "6.22.0",
-    "compression": "1.6.2",
-    "cross-env": "3.1.3",
-    "d3": "4.8.0",
-    "express": "4.14.0",
-    "invariant": "2.2.2",
-    "isomorphic-fetch": "2.2.1",
+    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "babel-polyfill": "^6.22.0",
+    "compression": "^1.6.2",
+    "cross-env": "^3.1.3",
+    "d3": "^4.8.0",
+    "express": "^4.14.0",
+    "invariant": "^2.2.2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "prop-types": "15.5.8",
-    "ramda": "0.23.0",
-    "rc-slider": "7.0.2",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-redux": "5.0.1",
-    "react-router": "3.0.0",
-    "react-router-redux": "4.0.7",
+    "prop-types": "^15.5.8",
+    "ramda": "^0.23.0",
+    "rc-slider": "^7.0.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.3",
     "react-sticky": "^5.0.8",
-    "recharts": "0.22.1",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "reselect": "2.5.4",
-    "styled-components": "1.4.2"
+    "recharts": "^0.22.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
+    "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^1.0.0-alpha.be5b7ddd",
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.be5b7ddd",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "chai": "^3.5.0",
