--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-homelessness",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.1c62c05f",
   "description": "Civic/Homelessness 2017",
   "main": "src/index.js",
   "contributors": [
@@ -44,37 +44,36 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.8",
-    "@hackoregon/component-library": "0.2.5",
-    "@hackoregon/webpacker": "0.1.7",
-    "autoprefixer": "6.5.4",
+    "@hackoregon/civic-server": "^0.0.8",
+    "@hackoregon/component-library": "^0.2.5",
+    "@hackoregon/webpacker": "^0.1.7",
     "axios": "^0.16.2",
-    "babel-core": "6.20.0",
-    "babel-loader": "6.4.1",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-class-properties": "6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
-    "babel-polyfill": "6.22.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-1": "6.16.0",
-    "babel-register": "6.18.0",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-register": "^6.18.0",
     "change-case": "^3.0.1",
-    "compression": "1.6.2",
-    "cross-env": "3.1.3",
-    "css-loader": "0.26.1",
+    "compression": "^1.6.2",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
     "d3-format": "^1.2.0",
-    "express": "4.14.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.24.1",
-    "invariant": "2.2.2",
-    "isomorphic-fetch": "2.2.1",
-    "json-loader": "0.5.4",
-    "postcss-loader": "1.2.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
+    "invariant": "^2.2.2",
+    "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^1.2.1",
     "prop-types": "^15.5.10",
-    "ramda": "0.23.0",
+    "ramda": "^0.23.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.3",
@@ -83,20 +82,20 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.7",
     "recharts": "^0.20.1",
-    "redux": "3.6.0",
+    "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^2.0.0",
-    "redux-thunk": "2.1.0",
-    "reselect": "2.5.4",
-    "style-loader": "0.13.1",
-    "styled-components": "1.4.2",
-    "url-loader": "0.5.7",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
+    "style-loader": "^0.13.1",
+    "styled-components": "^1.4.2",
+    "url-loader": "^0.5.7",
     "webpack": "^2.5.1",
-    "webpack-md5-hash": "0.0.5"
+    "webpack-md5-hash": "^0.0.5"
   },
   "devDependencies": {
     "@hackoregon/webpacker": "^1.0.0-alpha.be5b7ddd",
     "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
@@ -118,7 +117,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.23.0",
-    "babili-webpack-plugin": "0.0.10",
+    "babili-webpack-plugin": "^0.0.10",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
