--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hackoregon/emergency-response",
+  "name": "@hackoregon/transportation",
   "version": "0.1.0",
   "description": "Hack Oregon Front-end React + Redux Starter",
   "author": "David Daniel",
@@ -38,46 +38,37 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "0.1.1",
+    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "axios": "^0.16.1",
-    "babel-polyfill": "6.22.0",
-    "compression": "1.6.2",
-    "cross-env": "3.1.3",
-    "express": "4.14.0",
-    "invariant": "2.2.2",
-    "isomorphic-fetch": "2.2.1",
-    "leaflet": "1.0.3",
-    "ramda": "0.23.0",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-leaflet": "1.1.5",
-    "react-player": "0.15.0",
-    "react-redux": "5.0.1",
-    "react-router": "3.0.0",
-    "react-router-redux": "4.0.7",
-    "redux": "3.6.0",
+    "babel-polyfill": "^6.23.0",
+    "compression": "^1.6.2",
+    "cross-env": "^3.1.3",
+    "express": "^4.14.1",
+    "invariant": "^2.2.2",
+    "isomorphic-fetch": "^2.2.1",
+    "leaflet": "^1.0.3",
+    "ramda": "^0.23.0",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-fontawesome": "^1.6.1",
+    "react-leaflet": "^1.1.6",
+    "react-player": "^0.15.0",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
     "redux-form": "^6.6.0",
     "redux-logger": "^2.8.2",
-    "redux-thunk": "2.1.0",
-    "reselect": "2.5.4",
-    "styled-components": "1.4.2"
+    "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.0",
+    "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.6",
-    "@storybook/addon-info": "^3.2.9",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addon-links": "^3.2.6",
-    "@storybook/addon-notes": "^3.2.7",
-    "@storybook/react": "^3.2.8",
+    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
-    "babili-webpack-plugin": "0.0.10",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
@@ -126,7 +117,6 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "watch": "^1.0.2",
     "webpack": "^2.5.1",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
@@ -135,3 +125,4 @@
     "webpack-md5-hash": "^0.0.5",
     "webpack-node-externals": "^1.5.4"
   }
+}
