--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -69,8 +69,8 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -99,6 +99,7 @@
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
     "chalk": "^1.1.3",
+    "change-case": "3.0.1",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "colors": "^1.1.2",
