--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 cache: yarn
 node_js:
+- '6'
 - '6.11.4'
-# after_success:
-# - npm run test:cover:travis
-script:
+after_success:
 - npm run test
+script:
+- npm run build
