--- a/package.json
+++ b/package.json
@@ -87,6 +87,142 @@
     "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.17.0",
     "webpack-md5-hash": "^0.0.5",
+    "webpack-node-externals": "^1.5.4",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "colors": "^1.1.2",
+    "coveralls": "^2.11.15",
+    "css-loader": "^0.28.0",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-prefer-object-spread": "^1.1.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-watch": "^2.1.14",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.4",
+    "jest": "^20.0.4",
+    "jsdom": "^9.8.3",
+    "jsdom-global": "^2.1.0",
+    "json-loader": "^0.5.4",
+    "lerna": "^2.0.0",
+    "lodash-webpack-plugin": "^0.11.2",
+    "mocha": "^3.2.0",
+    "mocha-clean": "^1.0.0",
+    "mochawesome": "^1.5.1",
+    "nock": "^9.0.2",
+    "node-notifier": "^5.0.2",
+    "npm-run-all": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "react-addons-test-utils": "^15.5.3",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-transform-hmr": "^1.0.4",
+    "redux-immutable-state-invariant": "^1.2.4",
+    "redux-mock-store": "^1.2.1",
+    "regenerator-runtime": "^0.10.1",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.7",
+    "version-bump-prompt": "^3.1.0",
+    "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.1.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.0",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-node-externals": "^1.5.4",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.23.0",
+    "babili-webpack-plugin": "0.0.10",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "colors": "^1.1.2",
+    "coveralls": "^2.11.15",
+    "css-loader": "^0.28.0",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-prefer-object-spread": "^1.1.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-watch": "^2.1.14",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.4",
+    "jest": "^20.0.4",
+    "jsdom": "^9.8.3",
+    "jsdom-global": "^2.1.0",
+    "json-loader": "^0.5.4",
+    "lerna": "^2.0.0",
+    "lodash-webpack-plugin": "^0.11.2",
+    "mocha": "^3.2.0",
+    "mocha-clean": "^1.0.0",
+    "mochawesome": "^1.5.1",
+    "nock": "^9.0.2",
+    "node-notifier": "^5.0.2",
+    "npm-run-all": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "react-addons-test-utils": "^15.5.3",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-transform-hmr": "^1.0.4",
+    "redux-immutable-state-invariant": "^1.2.4",
+    "redux-mock-store": "^1.2.1",
+    "regenerator-runtime": "^0.10.1",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.7",
+    "version-bump-prompt": "^3.1.0",
+    "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.1.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.0",
+    "webpack-md5-hash": "^0.0.5",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
