--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -22,10 +22,9 @@
   },
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev",
+    "start": "npm run start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "-prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
@@ -69,6 +68,7 @@
   "devDependencies": {
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
+    "babel-cli": "^6.24.1",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
