--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "clean": "rimraf ./build",
     "dev": "babel-node tools/dev",
-    "build": "webpack --config tools/webpack.config.babel.js --colors",
+    "build": "webpack --config webpack.config.babel.js --colors",
     "build:server": "babel src --out-dir build --copy-files",
     "build:prod": "NODE_ENV=production run-s build build:server",
     "build:all": "BABEL_ENV=production run-s clean build build:server",
