--- a/packages/webpacker/.babelrc
+++ b/packages/webpacker/.babelrc
@@ -1,13 +1,38 @@
 {
-  "presets": [
-    [
-      "env", {
-        "targets": {
-          "node": true
-        }
-      }
-    ],
-    ["es2015", { "modules": false }],
-    "stage-1"
-  ]
+  "env": {
+    "test": {
+      "presets": [
+        "es2015",
+        "stage-1",
+        "react"
+      ],
+      "plugins": [
+        "istanbul"
+      ]
+    },
+    "cjs": {
+      "presets": [
+        [
+          "es2015",
+          {
+            "modules": "commonjs"
+          }
+        ],
+        "stage-1",
+        "react"
+      ]
+    },
+    "esm": {
+      "presets": [
+        [
+          "es2015",
+          {
+            "modules": false
+          }
+        ],
+        "stage-1",
+        "react"
+      ]
+    }
+  }
 }
