--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -4,18 +4,18 @@
   "description": "Compose your webpack configs - comes with a default",
   "author": "David Daniel <davidedaniel@gmail.com>",
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/hackoregon/webpacker"
   },
   "scripts": {
     "start": "npm install",
-    "prebuild": "npm run lint",
-    "build": "babel src --out-dir lib",
+    "build:esm": "BABEL_ENV=esm npx babel src --out-dir es --copy-files --no-comments",
+    "build:cjs": "BABEL_ENV=cjs npx babel src --out-dir lib --copy-files --no-comments",
+    "build": "npm run build:esm && npm run build:cjs",
     "bump": "bump --prompt --commit --push",
-    "postbump": "editme -w & npm prune --production",
-    "postpublish": "npm start",
     "lint": "eslint --fix src"
   },
   "keywords": [
@@ -28,6 +28,7 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
     "babel-loader": "^7.1.1",
+    "babel-cli": "^6.24.1",
     "babel-plugin-dynamic-import-node": "1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
