--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.28.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
@@ -109,6 +109,9 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10"
+    "@hackoregon/civic-server": "0.0.10",
+    "babel-runtime": "^6.23.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
