--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -29,18 +29,18 @@
   },
   "scripts": {
     "clean": "rimraf build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev",
+    "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "rimraf dist && babel-node ./tools/build.js",
-    "analyze": "babel-node ./tools/analyzeBundle.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production babel-node ./tools/build.js",
+    "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
     "start:dev": "cross-env BABEL_ENV=development babel-node server",
     "start:prod": "cross-env BABEL_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
-    "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
-    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "coverage": "NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
+    "test:cover:travis": "NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "show:coverage": "npm run test:cover && open coverage/index.html",
     "prebump": "NODE_ENV=production npm run build",
     "bump": "bump --prompt --commit",
